<resources>
    <string name="appfeedback_app_name">Appfeedback SDK</string>

    <string name="appfeedback_api_dev">http://dev-api-%d.appfeedback.dev01.ssk.cfm.yahoo.co.jp/</string>
    <string name="appfeedback_api_alpha">https://api-alpha.appfeedback.corp.yahoo.co.jp/</string>
    <string name="appfeedback_api_internal">https://api.appfeedback.corp.yahoo.co.jp/</string>
    <string name="appfeedback_api_external">https://api-appfeedback.yahoo.co.jp/</string>

    <string name="appfeedback_feedback">Feedback</string>
    <string name="appfeedback_feedback_recording">Screen recording</string>
    <string name="appfeedback_feedback_description">Feedback</string>
    <string name="appfeedback_feedback_title">Title ( Required )</string>
    <string name="appfeedback_feedback_comment">Message ( Required )</string>
    <string name="appfeedback_feedback_id">Display name ( Required )</string>
    <string name="appfeedback_feedback_post">Send</string>
    <string name="appfeedback_feedback_cancel">Cancel</string>
    <string name="appfeedback_feedback_empty_title">Please enter title</string>
    <string name="appfeedback_feedback_empty_comment">Please enter message</string>
    <string name="appfeedback_feedback_empty_id">Please enter your display name</string>
    <string name="appfeedback_feedback_empty_screenshot">Please attach screenshot</string>
    <string name="appfeedback_feedback_screenshot">Screenshot</string>
    <string name="appfeedback_feedback_select_screenshot">Select photos</string>
    <string name="appfeedback_feedback_screen_record">Screen recording</string>
    <string name="appfeedback_feedback_screen_record_show_tap_view">Show tapped locations</string>
    <string name="appfeedback_feedback_send_id_on">Send display name</string>
    <string name="appfeedback_feedback_edit_image">Edit image</string>
    <string name="appfeedback_feedback_sending_message">Sending...</string>

    <string name="appfeedback_feedback_slack_channel">Sent to %s</string>
    <string name="appfeedback_feedback_slack_error">Slack API Error: %s</string>
    <string name="appfeedback_feedback_internal_server_error">Unknown error (code: %d)</string>

    <string name="appfeedback_notification_title">Feedback</string>
    <string name="appfeedback_notification_mode_on">Enable feedback</string>
    <string name="appfeedback_notification_mode_off">Disable feedback</string>

    <string name="appfeedback_dialog_title">Start screen recording</string>
    <string name="appfeedback_dialog_message">Start screen recording.\nRecording time is up to 30 seconds.\n
By tapping the feedback icon you can stop recording halfway.\n</string>
    <string name="appfeedback_dialog_start">Start</string>
    <string name="appfeedback_dialog_cancel">Cancel</string>
    <string name="appfeedback_dialog_confirm">Don\'t show again</string>

    <string name="appfeedback_draw_save">Save</string>
    <string name="appfeedback_draw_clear">Clear</string>
    <string name="appfeedback_draw_close">Cancel</string>

    <string name="appfeedback_draw_tutorial_title">How to use</string>
    <string name="appfeedback_draw_tutorial_message">By swiping over the captured image you can draw an emphasis line.\n\nTap the Clear button to delete all the highlighted lines you drew.</string>
    <string name="appfeedback_draw_tutorial_confirm">Don\'t show again</string>
    <string name="appfeedback_draw_tutorial_close">Close</string>
</resources>
