<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:background="@color/appfeedback_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/appfeedback_white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/appfeedback_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appfeedback_draw_tutorial_title"
            android:textColor="@color/appfeedback_primary"
            android:textSize="14sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/appfeedback_bar_shadow"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:gravity="left|top"
        android:text="@string/appfeedback_draw_tutorial_message"
        android:textSize="12sp"
        android:textColor="@color/appfeedback_dark_gray"/>

    <CheckBox
        android:id="@+id/appfeedback_dialog_draw_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="12dp"
        android:layout_gravity="right"
        android:text="@string/appfeedback_draw_tutorial_confirm"
        android:textColor="@color/appfeedback_dark_gray"
        android:textSize="12sp"
        android:button="@drawable/appfeedback_icon_check"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <Button
            style="@style/appfeedback_bottom_button"
            android:id="@+id/appfeedback_dialog_draw_tutorial_close"
            android:text="@string/appfeedback_draw_tutorial_close"/>
    </LinearLayout>
</LinearLayout>
